fix: make form responsive on mobile

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
-	padding: 24px;
+	padding-block: 24px;
+	padding-inline: 24px;
 	align-items: center;
 	justify-content: center;
 	background-color: oklch(98.5% 0.002 247.839);
@@ -39,8 +40,9 @@ form {
 	display: flex;
 	flex-direction: inherit;
 	gap: 16px;
-	width: 380px;
-	margin: 24px;
+	width: 100%;
+	max-width: 380px;
+	margin: 24px auto;
 	border-radius: 16px;
 	padding: 24px;
 	background-color: white;
@@ -53,6 +55,7 @@ form div {
 	display: inherit;
 	flex-direction: inherit;
 	gap: 8px;
+	width: 100%;
 }
 
 form p {
@@ -67,6 +70,7 @@ label {
 }
 
 input {
+	width: 100%;
 	border: 1px solid darkgray;
 	border-radius: 6px;
 	padding: 8px 12px;
@@ -79,6 +83,7 @@ button {
 	font-weight: 600;
 	border: none;
 	border-radius: 6px;
+	width: 100%;
 	padding: 9px 16px;
 	background-color: oklch(62.7% 0.194 149.214);
 	color: white;
